test/parser/error_recovery_eof.yl
// RUN: cxx-comp %s 2>&1 -ast-dump | FileCheck %s
// CHECK: [[# @LINE + 1 ]]:13: error: expected type specifier
fn error(): {
